--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,3 @@
-*{
-    border: 0px;
-    margin: 0px;
-}
 
 
 body{
@@ -10,17 +6,182 @@ body{
     padding: 38px;
 }
 
-div#corpo{
+div#temporada{
     margin: 30px;
     padding:10px;
-    background-color: red;
-    background-image: url(../atividade_f1/imagens/fundo-f1.jpg);
-
+    background-color: white;
+    background-image: url(../formula1_front_end/imagens/fundo-f1.jpg);
+    background-repeat: repeat-y;
+    background-position: center;
+    height: 100%;
+    font-family: Arial, Helvetica, sans-serif; 
+    background-attachment: fixed;
 }
 
-div#corpo img.imagem{
-    width: 90%;
+div#temporada img.imagem{
+    width: 100%;
     padding: 5px;
     position: relative;
-    margin-left: 57px;
+    margin-left: -5px;
 }
+
+hr{
+    border-bottom: 1px solid gray;
+    margin-top:-10px;
+}
+
+hr.aux1{
+    width: 1.5%;
+    margin-left: 0px;
+    height: 25px;
+    background-color: gray;  
+    margin-top: -40px;
+    
+}
+
+img.bandeira-temporada{
+    position: absolute;
+    margin-left: 802px;
+    margin-top:-42px;
+}
+
+p.conteudo-temporada{
+    font-size: 15px;
+}
+
+nav#menu-inicial{
+    display: flex;
+    flex-direction: column;
+    margin-left: 11px;
+    margin-top: -15px;
+}
+
+nav#menu-inicial ul{
+    list-style:none;
+    line-height: 25px;
+}
+
+p.texto1{
+    margin-top: -10px;
+    text-align:justify;
+    line-height: 30px;
+}
+
+nav#paragrafo{
+    text-indent: 4%;
+    word-spacing: 8px;
+    letter-spacing: 0.5px;
+}
+
+/*LINKS*/
+a:link{
+    text-decoration: none;
+    color: black;
+}
+
+a:visited{
+    
+    color:black;
+}
+
+a:hover{
+    color:#d4d117d3;
+    text-decoration:underline;
+}
+
+/*TABELA EQUIPES*/
+table.tabela-equipes{
+    text-indent: 22px;
+    width:50%;
+}
+
+table.tabela-equipes td{
+    border-bottom: gray dotted 1px;
+    line-height: 30px;
+}
+
+
+
+/*POSICAO DAS BANDEIRAS DOS PAÍSES*/
+img.reinounido{
+    position: absolute;
+    margin-left: 5px;
+    margin-top:12px;
+}
+
+img.italia{
+    position: absolute;
+    margin-left: 5px;
+    margin-top:46px;
+}
+
+img.alemanha{
+    position: absolute;
+    margin-left: 5px;
+    margin-top:82px;
+}
+
+img.franca{
+    position: absolute;
+    margin-left: 5px;
+    margin-top:115px;
+}
+
+img.japao{
+    position: absolute;
+    margin-left: 5px;
+    margin-top:150px;
+}
+
+img.italia-tororosso{
+    position: absolute;
+    margin-left: 5px;
+    margin-top:186px;
+}
+
+img.austria{
+    position: absolute;
+    margin-left: 5px;
+    margin-top:220px;
+}
+
+img.reinounido-at{
+    position: absolute;
+    margin-left: 5px;
+    margin-top:257px;
+}
+
+img.india{
+    position: absolute;
+    margin-left: 5px;
+    margin-top:290px;
+}
+
+img.reinounido-brawn{
+    position: absolute;
+    margin-left: 5px;
+    margin-top:327px;
+}
+
+table.tabela-pilotos{
+    width: 50%;
+}
+
+table.tabela-pilotos th, td{
+     border-bottom: gray dotted 1px;
+     text-align: start;
+}
+
+p.f1{
+    text-indent: 32px;
+    word-spacing: 9px;
+    line-height: 30px;
+}
+
+ol.lista-links{
+    line-height: 25px;
+}
+
+
+
+
